--- a/ramdisk/init.universal5430.rc
+++ b/ramdisk/init.universal5430.rc
@@ -7,7 +7,7 @@ on early-init
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
 on init
-    export LD_SHIM_LIBS "/system/lib/libexynoscamera.so|libshim_camera.so:/system/bin/gpsd|libshim_gpsd.so"
+    export LD_SHIM_LIBS "/system/lib/libexynoscamera.so|libshim_camera.so:/system/bin/gpsd|libshim_gpsd.so:/system/vendor/lib/libwvm.so|libshim_wvm.so"
 
     symlink /sdcard /storage/sdcard0
     symlink /sdcard1 /storage/sdcard1
